# pr_PINN

./: .gitignore  .readthedocs.yml  README.md  SOURCES.txt  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: docs.yml  python.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/API/: modules.rst  pr_PINN.rst
pr_PINN/: __init__.py  __main__.py  __version__.py  pinn.py  pr_pinn.py  pr_pinn2d.py  pr_pinn3d.py  pr_prinn2d.py  test_pinn.py  test_pr_pinn.py
test/: test_pinn.py
